# nigeria-election-dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: .dockerignore  .env.example  Dockerfile  Procfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  admin_auth.py  api_gate.py  config.py  db.py  models.py  ratelimit.py  seed.py  seed_users.py  wsgi.py
backend/app/analysis/: competitiveness.py  descriptive.py  enp.py  refresh.py  swing.py
backend/app/api/: admin.py  analysis.py  auth.py  calendar.py  candidates.py  developer.py  elections.py  health.py  live.py  methodology.py  overview.py  results.py  scrape.py  states.py  sync.py
backend/app/importer/: cli.py  normalizers.py  schemas.py
backend/app/ocr/: batch.py  ec8a.py
backend/app/scraper/: backfill.py  calendar.py  daemon.py  discovery.py  election_types.py  irev_client.py  phases.py  sync.py
backend/data/historical/: 2015_presidential_national.csv  2019_presidential_national.csv  2023_governorship_march_state.csv  2023_governorship_state.csv  2023_presidential_national.csv  2023_presidential_state.csv  2024_governorship_state.csv  2026_fct_candidates.csv  2026_fct_chairman_lga.csv  2026_fct_councillor_ward.csv
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0006_users.py  (+6 more)
backend/tests/: conftest.py  test_analysis.py  test_api_health.py  test_calendar.py  test_developer_api.py  test_ec8a_parser.py  test_importer.py  test_normalizers.py  test_security_hardening.py
backend/tools/: build_state_geojson.py  e2e.py
(+94 files in other folders)
