[project]
name = "ng-election-dashboard"
version = "0.2.0"
description = "Pan-Nigeria election dashboard: historical + live + statistical analysis"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["pytesseract.*", "PIL.*", "testcontainers.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
  "integration: requires testcontainers Postgres",
]
